// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests over <GifExpertApp /> should have 2 <GifGrid /> elements 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Samurai X"
    key="Samurai X"
  />
  <GifGrid
    category="Dragon Ball"
    key="Dragon Ball"
  />
</Fragment>
`;

exports[`tests over <GifExpertApp /> should render <GifExpertApp /> corectly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;
